cmake_minimum_required(VERSION 3.10)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(Two_Sum 001.Two_Sum/test.cpp)
add_executable(Add_Two_Numbers 002.Add_Two_Numbers/test.cpp)
add_executable(Longest_Substring_Without_Repeating_Characters 003.Longest_Substring_Without_Repeating_Characters/test.cpp)
add_executable(Median_of_Two_Sorted_Arrays 004.Median_of_Two_Sorted_Arrays/test.cpp)
add_executable(Longest_Palindromic_Substring 005.Longest_Palindromic_Substring/test.cpp)
add_executable(ZigZag_Conversion 006.ZigZag_Conversion/test.cpp)
add_executable(Reverse_Integer 007.Reverse_Integer/test.cpp)
add_executable(String_to_Integer 008.String_to_Integer/test.cpp)
add_executable(Palindrome_Number 009.Palindrome_Number/test.cpp)
add_executable(Regular_Expression_Matching 010.Regular_Expression_Matching/test.cpp)
add_executable(Container_With_Most_Water 011.Container_With_Most_Water/test.cpp)
add_executable(Integer_to_Roman 012.Integer_to_Roman/test.cpp)
add_executable(Roman_to_Integer 013.Roman_to_Integer/test.cpp)
add_executable(Longest_Common_Prefix 014.Longest_Common_Prefix/test.cpp)
add_executable(3Sum 015.3Sum/test.cpp)
add_executable(3Sum_Closest 016.3Sum_Closest/test.cpp)
add_executable(Letter_Combinations_of_a_Phone_Number 017.Letter_Combinations_of_a_Phone_Number/test.cpp)
add_executable(4Sum 018.4Sum/test.cpp)
add_executable(Merge_Two_Sorted_Lists 021.Merge_Two_Sorted_Lists/test.cpp)
add_executable(Generate_Parentheses 022.Generate_Parentheses/test.cpp)
add_executable(First_Missing_Positive 041.First_Missing_Positive/test.cpp)
add_executable(Rotate_Image 048.Rotate_Image/test.cpp)
add_executable(Add_Binary 067.Add_Binary/test.cpp)
add_executable(Add_Strings 415.Add_Strings/test.cpp)
add_executable(132_Pattern 456.132_Pattern/test.cpp)
add_executable(Most_Common_Word 819.Most_Common_Word/test.cpp)
add_executable(Advantage_Shuffle 870.Advantage_Shuffle/test.cpp)
add_executable(DI_String_Match 942.DI_String_Match/test.cpp)
add_executable(Add_to_Array-Form_of_Integer 989.Add_to_Array-Form_of_Integer/test.cpp)
