cmake_minimum_required(VERSION 3.10)
project(leetcode)

set(CMAKE_CXX_STANDARD 17)

add_executable(Two_Sum 001.Two_Sum/test.cpp)
add_executable(Add_Two_Numbers 002.Add_Two_Numbers/test.cpp)
add_executable(Longest_Substring_Without_Repeating_Characters 003.Longest_Substring_Without_Repeating_Characters/test.cpp)
add_executable(Median_of_Two_Sorted_Arrays 004.Median_of_Two_Sorted_Arrays/test.cpp)
add_executable(Longest_Palindromic_Substring 005.Longest_Palindromic_Substring/test.cpp)
add_executable(ZigZag_Conversion 006.ZigZag_Conversion/test.cpp)
add_executable(Reverse_Integer 007.Reverse_Integer/test.cpp)
add_executable(String_to_Integer 008.String_to_Integer/test.cpp)
add_executable(Palindrome_Number 009.Palindrome_Number/test.cpp)
add_executable(Regular_Expression_Matching 010.Regular_Expression_Matching/test.cpp)
add_executable(Container_With_Most_Water 011.Container_With_Most_Water/test.cpp)
add_executable(Integer_to_Roman 012.Integer_to_Roman/test.cpp)
add_executable(Roman_to_Integer 013.Roman_to_Integer/test.cpp)
add_executable(Longest_Common_Prefix 014.Longest_Common_Prefix/test.cpp)
add_executable(3Sum 015.3Sum/test.cpp)
add_executable(3Sum_Closest 016.3Sum_Closest/test.cpp)
add_executable(Letter_Combinations_of_a_Phone_Number 017.Letter_Combinations_of_a_Phone_Number/test.cpp)
add_executable(4Sum 018.4Sum/test.cpp)
add_executable(Valid_Parentheses 020.Valid_Parentheses/test.cpp)
add_executable(Merge_Two_Sorted_Lists 021.Merge_Two_Sorted_Lists/test.cpp)
add_executable(Generate_Parentheses 022.Generate_Parentheses/test.cpp)
add_executable(Swap_Nodes_in_Pairs 024.Swap_Nodes_in_Pairs/test.cpp)
add_executable(Valid_Sudoku 036.Valid_Sudoku/test.cpp)
add_executable(Sudoku_Solver 037.Sudoku_Solver/test.cpp)
add_executable(First_Missing_Positive 041.First_Missing_Positive/test.cpp)
add_executable(Rotate_Image 048.Rotate_Image/test.cpp)
add_executable(Jump_Game 055.Jump_Game/test.cpp)
add_executable(Unique_Paths 062.Unique_Paths/test.cpp)
add_executable(Unique_Paths_II 063.Unique_Paths_II/test.cpp)
add_executable(Add_Binary 067.Add_Binary/test.cpp)
add_executable(Word_Ladder 127.Word_Ladder/test.cpp)
add_executable(Palindrome_Partitioning 131.Palindrome_Partitioning/test.cpp)
add_executable(Majority_Element 169.Majority_Element/test.cpp)
add_executable(LRU_Cache 146.LRU_Cache/test.cpp)
add_executable(Bitwise_AND_of_Numbers_Range 201.Bitwise_AND_of_Numbers_Range/test.cpp)
add_executable(Evaluate_Division 399.Evaluate_Division/test.cpp)
add_executable(Remove_K_Digits 402.Remove_K_Digits/test.cpp)
add_executable(Add_Strings 415.Add_Strings/test.cpp)
add_executable(Minimum_Moves_to_Equal_Array_Elements 453.Minimum_Moves_to_Equal_Array_Elements/test.cpp)
add_executable(132_Pattern 456.132_Pattern/test.cpp)
add_executable(Next_Greater_Element_I 496.Next_Greater_Element_I/test.cpp)
add_executable(Largest_Number_At_Least_Twice_of_Others 747.Largest_Number_At_Least_Twice_of_Others/test.cpp)
add_executable(Most_Common_Word 819.Most_Common_Word/test.cpp)
add_executable(Keys_and_Rooms 841.Keys_and_Rooms/test.cpp)
add_executable(Binary_Gap 868.Binary_Gap/test.cpp)
add_executable(Advantage_Shuffle 870.Advantage_Shuffle/test.cpp)
add_executable(Knight_Dialer 935.Knight_Dialer/test.cpp)
add_executable(DI_String_Match 942.DI_String_Match/test.cpp)
add_executable(Add_to_Array-Form_of_Integer 989.Add_to_Array-Form_of_Integer/test.cpp)
add_executable(Construct_Binary_Search_Tree_from_Preorder_Traversal 1008.Construct_Binary_Search_Tree_from_Preorder_Traversal/test.cpp)
add_executable(Longest_Arithmetic_Sequence 1027.Longest_Arithmetic_Sequence/test.cpp)
